Add hire me option

--- a/themes/sagiri/_config.yml
+++ b/themes/sagiri/_config.yml
@@ -783,6 +783,7 @@ card:
     Frameworks: Laravel, Wordpress, WooCommerce, Express.js, AngularJS, Angular 8, Android SDK, Flutter, Xamarin.Android, Xamarin.forms, Nativescript, Unity 3D, Struts2.
     My Game: Dota 2.
     Contact me: Email me at <a href="mailto:abozanona@gmail.com?subject=That%20Astonishing%20Movie...&body=Hi%20Abozanona%2C%0D%0A%0D%0AI%20have%20found%20a%20movie%20%26%20I'm%20sure%20you'll%20love%20it!%0D%0AMaybe%20we%20should%20watch%20it%20together%3F%0D%0ALet%20me%20know%20when%20you're%20free!%0D%0A%0D%0AYagami%20Light." target="_blank">abozanona@gmail.com</a>
+    Hire me: <a href="/assets/abozanona-resume.pdf" target="_blank">Have a look at my CV</a>
 
 footer:
   # Specify the date when the site was setup.
