--- a/themes/sagiri/_config.yml
+++ b/themes/sagiri/_config.yml
@@ -24,10 +24,6 @@ favicon:
   hidden: https://cdn.jsdelivr.net/gh/abozanona/abozanona.me/images/failure.ico
   show_text: (/≧▽≦/)It works now！
   hide_text: (●—●)It collapsed！
-  apple_touch_icon: /apple-touch-icon.png
-  safari_pinned_tab: /safari-pinned-tab.svg
-  android_manifest: /manifest.json
-  #ms_browserconfig: /images/browserconfig.xml
 
 # Set default keywords (Use a comma to separate)
 keywords: "Abozanona,blog,development"
@@ -780,9 +776,9 @@ card:
   description: My Soldiers, Scream!
   items:
     Careers: Part-time university lecturer(Nov2018–Feb2019), Angular developer(Feb2019–Feb2020), Struts 2 developer(Mar2020-NOW).
-    Frameworks: Laravel, Wordpress, WooCommerce, Express.js, AngularJS, Angular 8, Android SDK, Flutter, Xamarin.Android, Xamarin.forms, Nativescript, Unity 3D, Struts2.
+    Frameworks: go, Laravel, Wordpress, WooCommerce, Express.js, AngularJS, Angular 8, Android SDK, Flutter, Xamarin.Android, Xamarin.forms, Nativescript, Unity 3D, Struts2.
     My Game: Dota 2.
-    Contact me: Email me at <a href="mailto:abozanona@gmail.com?subject=That%20Astonishing%20Movie...&body=Hi%20Abozanona%2C%0D%0A%0D%0AI%20have%20found%20a%20movie%20%26%20I'm%20sure%20you'll%20love%20it!%0D%0AMaybe%20we%20should%20watch%20it%20together%3F%0D%0ALet%20me%20know%20when%20you're%20free!%0D%0A%0D%0AYagami%20Light." target="_blank">abozanona@gmail.com</a>
+    Contact me: <a href="mailto:abozanona@gmail.com?subject=That%20Astonishing%20Movie...&body=Hi%20Abozanona%2C%0D%0A%0D%0AI%20have%20found%20a%20movie%20%26%20I'm%20sure%20you'll%20love%20it!%0D%0AMaybe%20we%20should%20watch%20it%20together%3F%0D%0ALet%20me%20know%20when%20you're%20free!%0D%0A%0D%0AYagami%20Light." target="_blank">abozanona@gmail.com</a>
     Hire me: <a href="/assets/abozanona-resume.pdf" target="_blank">Have a look at my CV</a>
 
 footer:
@@ -811,4 +807,4 @@ footer:
 description: Wind, love, code & everything in between!
 
 # Theme version
-version: 0.0.77
+version: 0.0.78
