--- a/themes/sagiri/_config.yml
+++ b/themes/sagiri/_config.yml
@@ -332,8 +332,8 @@ han: false
 
 # Disqus
 disqus:
-  enable: false
-  shortname:
+  enable: true
+  shortname: abozanona-me
   count: false
 # Hypercomments
 #hypercomments_id:
@@ -367,7 +367,7 @@ valine:
 # Gitment
 # Introduction: https://imsun.net/posts/gitment-introduction/
 gitment:
-  enable: true
+  enable: false
   mint: true # RECOMMEND, A mint on Gitment, to support count, language and proxy_gateway
   count: true # Show comments count in post meta area
   lazy: false # Comments lazy loading with a button
@@ -807,4 +807,4 @@ footer:
 description: Wind, love, code & everything in between!
 
 # Theme version
-version: 0.0.79
+version: 0.0.80
