--- a/themes/sagiri/_config.yml
+++ b/themes/sagiri/_config.yml
@@ -330,21 +330,6 @@ han: false
 # You can get your uid from https://livere.com/insight/myCode (General web site)
 # livere_uid: MTAyMC81MzI1Mi8yOTcyNg==
 
-# Gitment
-# Introduction: https://imsun.net/posts/gitment-introduction/
-gitment:
-  enable: false
-  mint: true # RECOMMEND, A mint on Gitment, to support count, language and proxy_gateway
-  count: true # Show comments count in post meta area
-  lazy: false # Comments lazy loading with a button
-  cleanly: false # Hide 'Powered by ...' on footer, and more
-  language: # Force language, or auto switch by theme
-  github_user: # MUST HAVE, Your Github ID
-  github_repo: # MUST HAVE, The repo you use to store Gitment comments
-  client_id:   # MUST HAVE, Github client id for the Gitment
-  client_secret: # EITHER this or proxy_gateway, Github access secret token for the Gitment
-  proxy_gateway: # Address of api proxy, See: https://github.com/aimingoo/intersect
-  redirect_protocol: # Protocol of redirect_uri with force_redirect_protocol when mint enabled
 
 # Baidu Share
 # Available value:
@@ -703,7 +688,7 @@ card:
   name: <span style="opacity:.9;">Lead those New recruits into hell.</span>
   description: My Soldiers, Scream!
   items:
-    Careers: Part-time university lecturer(Nov2018–Feb2019), Angular developer(Feb2019–Feb2020), Struts 2 developer(Mar2020-NOW).
+    Careers: Angular developer(Nov2018–Feb2020), Struts 2 developer(Mar2020-Oct2023), GO developer(Nov2023-NOW).
     Frameworks: go, Laravel, Wordpress, WooCommerce, Express.js, AngularJS, Angular 8, Android SDK, Flutter, Xamarin.Android, Xamarin.forms, Nativescript, Unity 3D, Struts2.
     My Game: Dota 2.
     Contact me: <a href="mailto:abozanona@gmail.com?subject=That%20Astonishing%20Movie...&body=Hi%20Abozanona%2C%0D%0A%0D%0AI%20have%20found%20a%20movie%20%26%20I'm%20sure%20you'll%20love%20it!%0D%0AMaybe%20we%20should%20watch%20it%20together%3F%0D%0ALet%20me%20know%20when%20you're%20free!%0D%0A%0D%0AYagami%20Light." target="_blank">abozanona@gmail.com</a>
