--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "5.4.0"
+    "version": "8.0.0"
   },
   "dependencies": {
-    "hexo": "^5.0.0",
+    "hexo": "^8.0.0",
     "hexo-all-minifier": "0.5.5",
-    "hexo-fs": "3.1.0",
-    "hexo-generator-archive": "^1.0.0",
-    "hexo-generator-category": "^1.0.0",
+    "hexo-fs": "5.0.0",
+    "hexo-generator-archive": "^2.0.0",
+    "hexo-generator-category": "^2.0.0",
     "hexo-generator-feed": "3.0.0",
-    "hexo-generator-index": "^2.0.0",
-    "hexo-generator-sitemap": "2.1.0",
+    "hexo-generator-index": "^4.0.0",
+    "hexo-generator-sitemap": "^3.0.1",
     "hexo-generator-tag": "^1.0.0",
-    "hexo-renderer-ejs": "^1.0.0",
-    "hexo-renderer-marked": "^4.0.0",
-    "hexo-renderer-stylus": "^2.0.0",
+    "hexo-renderer-ejs": "^2.0.0",
+    "hexo-renderer-marked": "^7.0.1",
+    "hexo-renderer-stylus": "^3.0.1",
     "hexo-renderer-swig": "^1.1.0",
-    "hexo-server": "^2.0.0",
-    "hexo-theme-landscape": "^0.0.3",
+    "hexo-server": "^3.0.0",
     "hexo-wordcount": "3.0.2"
   },
   "packageManager": "pnpm@9.15.4+sha512.b2dc20e2fc72b3e18848459b37359a32064663e5627a51e4c74b2c29dd8e8e0491483c3abb40789cfd578bf362fb6ba8261b05f0387d76792ed6e23ea3b1b6a0"
